Revert "fix overflow bug"
This reverts commit 7c57ac34e7acda10e25711941174b069d17d6feb.

--- a/src/routes/NotFound/NotFound.scss
+++ b/src/routes/NotFound/NotFound.scss
@@ -10,7 +10,6 @@
 }
 
 .not-found__background-form {
-  width: 100%; // fixes overflow bug
   position: absolute;
 }
 
